[metadata]
name = miper
summary = OpenStack DR Recovery
description-file =
    README.rst
author = ECONE
author-email = cloud@hihuron.com
home-page = http://www.hihuron.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    miper

[entry_points]
oslo.config.opts =
    miper = miper.opts:list_opts
    keystonemiddleware = keystonemiddleware.auth_token:list_opts
    oslo_concurrency = oslo_concurrency.opts:list_opts
    oslo.messaging = oslo_messaging.opts:list_opts
    oslo.db.concurrency = oslo.db.concurrency:list_opts
console_scripts =
    miper-all = miper.cmd.all:main
    miper-api = miper.cmd.api:main
    miper-manage = miper.cmd.manage:main
    miper-rootwrap = oslo_rootwrap.cmd:main
    miper-recover = miper.cmd.recover:main
# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
    miper.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    miper.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    miper.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify._impl_messaging:MessagingV2Driver
    miper.openstack.common.notifier.rpc_notifier = oslo_messaging.notify._impl_messaging:MessagingDriver
    miper.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
# These are for backwards compatibility with Juno middleware configurations
oslo_middleware =
    miper.api.middleware.sizelimit = oslo_middleware.sizelimit
    miper.openstack.common.middleware.request_id = oslo_middleware.request_id

miper.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = miper/locale
domain = miper

[update_catalog]
domain = miper
output_dir = miper/locale
input_file = miper/locale/miper.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = miper/locale/miper.pot
